--- a/zago/.gitignore
+++ b/zago/.gitignore
@@ -44,3 +44,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+# Xcode
+xcuserdata/
+project.xcworkspace/
+DerivedData/
+ios/Podfile.lock
