xu ly man hinh message

--- a/zago/.gitignore
+++ b/zago/.gitignore
@@ -49,3 +49,5 @@ xcuserdata/
 project.xcworkspace/
 DerivedData/
 ios/Podfile.lock
+ios/Runner.xcodeproj/project.pbxproj
+ios/Runner.xcworkspace/contents.xcworkspacedata
