--- a/zago/pubspec.yaml
+++ b/zago/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: any
+  freezed_annotation: any
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,10 +40,18 @@ dependencies:
   easy_localization: ^3.0.0
   dio: ^4.0.4
   json_annotation: ^4.4.0
+  permission_handler: ^9.2.0
+  image_picker: ^0.8.4+10
+  video_player: ^2.2.19
+  flutter_image_compress: ^1.1.0
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: any
+  build_runner: any
+  freezed: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
