them_menu_pop_up

--- a/zago/pubspec.yaml
+++ b/zago/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   video_player: ^2.2.19
   flutter_image_compress: ^1.1.0
   path_provider: ^2.0.9
+  focused_menu: ^1.0.5
+  # flutter_blurhash: ^0.6.4s
 
 dev_dependencies:
   flutter_test:
