Add man hinh ocr_ekyc

--- a/zago/ios/Runner/Info.plist
+++ b/zago/ios/Runner/Info.plist
@@ -49,5 +49,15 @@
 		<string>vi</string>
 	</array>
 
+	 <!-- Permission options for the `camera` group -->
+    <key>NSCameraUsageDescription</key>
+    <string>camera</string>
+	 <!-- Permission options for the `microphone` group -->
+    <key>NSMicrophoneUsageDescription</key>
+    <string>microphone</string>
+	<!-- Permission options for the `photos` group -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>photos</string>
+
 </dict>
 </plist>
