--- a/zago/pubspec.yaml
+++ b/zago/pubspec.yaml
@@ -29,10 +29,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  equatable: any
-  freezed_annotation: any
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -47,6 +43,9 @@ dependencies:
   path_provider: ^2.0.9
   focused_menu: ^1.0.5
   # flutter_blurhash: ^0.6.4s
+  camera: ^0.9.4+14
+  path: ^1.8.0
+  image: ^3.1.3
 
 dev_dependencies:
   flutter_test:
