--- a/zago/pubspec.yaml
+++ b/zago/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   camera: ^0.9.4+14
   path: ^1.8.0
   image: ^3.1.3
+  web_socket_channel: ^2.1.0
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_test:
