--- a/zago/pubspec.yaml
+++ b/zago/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   image: ^3.1.3
   web_socket_channel: ^2.1.0
   socket_io_client: ^1.0.2
+  bloc: ^8.0.3
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
